--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- index26:42-->
 <head>
 <meta charset="utf-8">
-<title>Vogue Interiors</title>
+<title>Vogue Interiors | Complete interior Solution</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
